--- a/packages/taro-webpack-runner/package.json
+++ b/packages/taro-webpack-runner/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tarojs/webpack-runner",
-  "version": "3.3.6",
+  "version": "0.0.1-servyou.5",
   "description": "webpack runner for taro",
   "main": "index.js",
   "scripts": {
@@ -56,7 +56,7 @@
     "postcss": "8.3.5",
     "postcss-loader": "4.3.0",
     "postcss-plugin-constparse": "3.3.6",
-    "postcss-pxtransform": "3.3.6",
+    "postcss-pxtransform": "0.0.1-servyou.1",
     "react-refresh": "0.9.0",
     "resolve": "1.15.1",
     "resolve-url-loader": "3.1.3",
