--- a/packages/taro-mini-runner/package.json
+++ b/packages/taro-mini-runner/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tarojs/mini-runner",
-  "version": "3.3.6",
+  "version": "0.0.1-afe.2",
   "description": "Mini app runner for taro",
   "main": "index.js",
   "scripts": {
